# visualize_claude_convos

./: .gitignore  PLAN.md  README.md  canonize_tags.py  cluster_spike.py  cluster_summaries.py  cluster_tags.py  embed_features.py  embed_summaries.py  embed_tags.py  embeddings.md  extract_sample.py  feature_scoring.md  label_corpus.py  label_spike.py  main.py  pyproject.toml  umap_features_spike.py  umap_spike.py  visualize_claude_convos.code-workspace
experiments/: README.md  canonize_tags.py  cluster_spike.py  dump_test_data_for_ui.py  embed_features.py  embed_summaries.py  embed_tags.py  extract_sample.py  label_corpus.py  label_spike.py  umap_features_spike.py  umap_spike.py
pipeline/: README.md  config.py  demo_data.py  prompts.py  run_all.py  s1_extract.py  s2_label.py  s3_vectorize.py  s4_landmarks.py  s5_project.py  s6_cluster.py  s7_name_clusters.py  s8_export.py  store.py
plans_docs/: PLAN.md  embeddings.md
spike_outputs/: experiments.md
spike_summary_tag_embed_cluster/: experiments.md
ui/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  data.ts  index.css  main.tsx  palette.ts  plotly-basic-dist-min.d.ts  themes.ts  types.ts
ui/src/components/: DetailPanel.tsx  MapView.tsx  PlotlyChart.tsx  TimeBar.tsx
