[project]
name = "visualize-claude-convos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.101.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "sentence-transformers>=5.5.0",
    "umap-learn>=0.5.12",
]
